<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_gradient" android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:name="androidx.navigation.fragment.NavHostFragment" android:id="@id/nav_host_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" app:defaultNavHost="true" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:navGraph="@navigation/mobile_navigation" />
    <EditText android:textSize="18.0sp" android:id="@id/editText" android:visibility="visible" android:layout_width="310.0dip" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:hint="@string/signin_username" android:ems="10" android:inputType="textPersonName" android:alpha="0.0" android:drawableEnd="@drawable/ic_username" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView6" />
    <EditText android:textSize="18.0sp" android:id="@id/editText3" android:visibility="visible" android:layout_width="310.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:hint="@string/signin_password" android:ems="10" android:inputType="textPassword" android:alpha="0.0" android:drawableEnd="@drawable/ic_password" android:autofillHints="" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/editText" />
    <Button android:textSize="14.0sp" android:id="@id/button" android:background="@drawable/btn_style" android:visibility="visible" android:layout_width="120.0dip" android:layout_height="43.0dip" android:layout_marginBottom="60.0dip" android:text="@string/signin_btn" android:alpha="0.0" app:layout_constraintBottom_toBottomOf="@id/nav_host_fragment" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="24.0sp" android:textColor="@android:color/black" android:id="@id/textView6" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="170.0dip" android:text="@string/sign_title" android:alpha="0.0" android:textAlignment="center" android:layout_marginStart="30.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/nav_host_fragment" />
    <TextView android:textSize="14.0sp" android:id="@id/textView2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/signup_link_text" android:alpha="0.0" android:layout_marginEnd="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/editText3" />
    <EditText android:textSize="18.0sp" android:id="@id/editText2" android:visibility="visible" android:layout_width="305.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/signin_username" android:ems="10" android:inputType="textPersonName" android:alpha="0.0" android:drawableEnd="@drawable/ic_username" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView6" />
    <EditText android:textSize="18.0sp" android:id="@id/editText4" android:visibility="visible" android:layout_width="305.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/signup_email" android:ems="10" android:inputType="textEmailAddress" android:alpha="0.0" android:drawableEnd="@drawable/ic_email" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/editText2" />
    <EditText android:textSize="18.0sp" android:id="@id/editText5" android:visibility="visible" android:layout_width="305.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/signin_password" android:ems="10" android:inputType="textPassword" android:alpha="0.0" android:drawableEnd="@drawable/ic_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/editText4" />
    <EditText android:textSize="18.0sp" android:id="@id/editText6" android:visibility="visible" android:layout_width="305.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/signup_conf_pass" android:ems="10" android:inputType="textPassword" android:alpha="0.0" android:drawableEnd="@drawable/ic_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.49" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/editText5" />
    <Button android:textSize="14.0sp" android:id="@id/button2" android:background="@drawable/btn_style" android:visibility="visible" android:layout_width="149.0dip" android:layout_height="51.0dip" android:layout_marginBottom="50.0dip" android:text="@string/signup_btn" android:alpha="0.0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501" app:layout_constraintStart_toStartOf="parent" />
    <ImageView android:id="@id/imageView2" android:layout_width="0.0dip" android:layout_height="163.0dip" android:contentDescription="@string/app_heading" android:layout_marginStart="-15.0dip" android:layout_marginEnd="-15.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/sign_bg" />
    <TextView android:textSize="36.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/app_heading" android:alpha="0.0" android:fontFamily="sans-serif" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/nav_host_fragment" />
</androidx.constraintlayout.widget.ConstraintLayout>