<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/ConstraintLayout" android:background="@drawable/bg_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:name="androidx.navigation.fragment.NavHostFragment" android:id="@id/nav_host_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" app:defaultNavHost="true" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:navGraph="@navigation/mobile_navigation" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar3" android:background="#00ffffff" android:layout_width="350.0dip" android:layout_height="55.0dip" android:layout_marginTop="30.0dip" android:minHeight="?actionBarSize" android:alpha="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:popupTheme="@style/AppTheme.PopupOverlay" app:title="" app:titleTextColor="#ff000000" />
    <ImageView android:id="@id/imageView6" android:layout_width="362.0dip" android:layout_height="424.0dip" android:contentDescription="@string/app_name" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/nav_host_fragment" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:srcCompat="@drawable/files_bg_wh" />
    <ImageView android:id="@id/imageView3" android:layout_width="361.0dip" android:layout_height="544.0dip" android:layout_marginTop="90.0dip" android:contentDescription="@string/app_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/nav_host_fragment" app:srcCompat="@drawable/files_bg" />
    <TextView android:textSize="36.0sp" android:textColor="#ff000000" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/list_head" android:alpha="0.0" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/nav_host_fragment" />
    <TableLayout android:id="@id/tableLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="170.0dip" android:alpha="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/nav_host_fragment">
        <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableLayout>
    <Button android:textSize="12.0sp" android:id="@id/button2" android:background="@drawable/btn_style2" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/senddata_btn" android:alpha="0.0" android:textAllCaps="false" android:layout_marginEnd="50.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <Button android:textSize="12.0sp" android:id="@id/button3" android:background="@drawable/btn_style2" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/qrcode_btn" android:alpha="0.0" android:textAllCaps="false" android:layout_marginStart="50.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textColor="#80000000" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="100.0dip" android:text="@string/url_link" android:alpha="0.0" app:layout_constraintBottom_toBottomOf="@id/nav_host_fragment" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>